--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- 下面这项是更改网页的图标的 -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>7.supermall</title>
+    <title>supermall</title>
   </head>
   <body>
     <noscript>
